# irobotcreate2ros

./: .gitignore  CMakeLists.txt  README.md  circuit.world  costmap_common_params.yaml  frames.gv  package.xml
CentroPiaggio/: CPmap.yaml  CPmap_empty.yaml  CentroPiaggio.sdf  model.config
cad/: bin_support.prt.1
cad/bin_support/: bin_support.stl
cad/laser_support/: instructions.md  laser_support.prt  laser_support.stl
devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
devel/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
gazebo/: axis.gazebo.xacro  iRobot.gazebo.xacro  wheel.gazebo.xacro
iRobot/: iRobot.sdf  iRobot.urdf  model.config
iRobot_worlds/: cp_wf_and_people.world  cp_with_furniture.world  lab.world  one_iRobot.world  one_iRobot_at_CP.world  one_iRobot_at_CPwf.world  one_iRobot_at_CPwf_and_people.world
include/: joy_node.h  keyboard_node.h
include/irobotcreate2/: OpenInterface.h  odometry.h
include/roomba_500_series/: OpenInterface.h
launch/: cp_wf_and_people.launch  cp_with_furniture.launch  create_empty_world.launch~  create_mobile_base.launch~  empty_world.launch  gazebo.launch  gazebo_test.launch  irobot_joy.launch  irobotcreate2.launch  irobotcreate2_light.launch  lab.launch  laser_visual.rviz  move_base.launch  one_iRobot_at_CP_gazebo.launch  one_iRobot_at_CPwf.launch  one_iRobot_at_CPwf_and_people.launch  one_iRobot_gazebo.launch
model/: axis.urdf.xacro  camera.urdf.xacro  create.urdf.xacro~  create_base.xacro~  create_wheel.xacro~  generate_model.sh  generate_model.sh~  hokuyo.urdf.xacro  iRobot.urdf  iRobot.urdf.xacro  imu.urdf.xacro  materials.urdf  model.config  model.config~  model.sdf  shelf.urdf.xacro  wheel.urdf.xacro
msg/: Battery.msg  Brushes.msg  Buttons.msg  Diagnostic.msg  DigitLeds.msg  IRCharacter.msg  Leds.msg  Note.msg  PlaySong.msg  RoombaIR.msg  RoombaSwitch.msg  ScheduleLeds.msg  Song.msg  WheelDrop.msg
param/: global_costmap_params.yaml
scripts/: Apriltag_detection.ipynb  Arrow-Detection-and-Recognition.ipynb  Integration_Detection.ipynb  Vision Pipeline.ipynb  arrow-detec.py  integrated_detect.py
scripts/.ipynb_checkpoints/: Integration_Detection-checkpoint.ipynb
src/: basic_commands.cpp  irobotcreate2.cpp  irobotcreate2_lightweight.cpp  joy_node.cpp  keyboard_node.cpp  roomba500_lightweight.cpp  roomba560.cpp
src/iRobot/: OpenInterface.cpp
src/irobotcreate2/: OpenInterface.cpp  odometry.cpp
worlds/: irobotcreate2_world.world
